--- a/src/components/message/message.css
+++ b/src/components/message/message.css
@@ -1,5 +1,4 @@
-/* MessageForm styles */
-
+/* chat feed */
 .message-form {
   display: flex;
   justify-content: space-between;
@@ -19,6 +18,7 @@
   margin-right: 1rem;
   box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.1);
   font-size: 1rem;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .send-button {
@@ -29,7 +29,7 @@
 
 .send-icon {
   font-size: 1.25rem;
-  color: #0077ff;
+  color: #161617;
 }
 
 /* TheirMessage styles */
@@ -38,23 +38,10 @@
   background-color: #f0f0f0;
   padding: 0.5rem;
   border-radius: 0.5rem;
-  margin-top: 1rem;
+  margin-top: 10px;
   clear: both;
   max-width: 70%;
   font-size: 1rem;
-}
-
-.message .message-info {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-size: 0.75rem;
-  color: #999;
-}
-
-.message .message-info .username {
-  font-weight: bold;
-  margin-right: 0.5rem;
 }
 
 /* ChatFeed styles */
@@ -72,30 +59,6 @@
   padding: 1rem;
 }
 
-.chat-title-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0.75rem;
-  background-color: #0077ff;
-  color: #fff;
-  font-size: 1.25rem;
-  font-weight: bold;
-}
-
-.chat-subtitle {
-  font-size: 0.875rem;
-  color: #fff;
-  margin-left: 1rem;
-}
-
-.chat-title-container button {
-  background-color: transparent;
-  border: none;
-  color: #000000;
-  cursor: pointer;
-}
-
 .chat-container {
   flex: 1;
   overflow: auto;
@@ -107,10 +70,4 @@
   text-align: center;
   font-style: italic;
   color: #999;
-}
-
-.chat-footer {
-  padding: 1rem;
-  background-color: #f0f0f0;
-  border-top: 1px solid #ddd;
 }
