--- a/src/pages/signup/signup.css
+++ b/src/pages/signup/signup.css
@@ -1,4 +1,4 @@
-.signup-container {
+/* .signup-container {
   width: 60%;
   margin: 0 auto;
 }
@@ -73,4 +73,4 @@ select option {
   margin-bottom: 20px;
   font-size: 16px;
   color: rgb(255, 255, 255);
-}
+} */
